ci: update build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
         push: true
         cache-from: type=gha
         cache-to: type=gha,mode=max
-        platforms: 
+        platforms: linux/amd64,linux/arm64
         tags: |
           ghcr.io/requarks/wiki:${{ env.REL_VERSION_STRICT }}
 
