--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
         jq --arg vs "$REL_VERSION_STRICT" -r '. + {dev:false, version:$vs}' pkg-temp.json > package.json
         rm pkg-temp.json
         cat package.json
-        
+
     - name: Fetch Latest Locales
       uses: localazy/download@v1
       with:
@@ -39,10 +39,10 @@ jobs:
         registry: ghcr.io
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GITHUB_TOKEN }}
-        
+
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
-      
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
@@ -54,9 +54,9 @@ jobs:
         provenance: true
         sbom: true
         push: true
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-        platforms: linux/amd64,linux/arm64
+        # cache-from: type=gha
+        # cache-to: type=gha,mode=max
+        # platforms: linux/amd64,linux/arm64
         tags: |
           ghcr.io/requarks/wiki:${{ env.REL_VERSION }}
 
@@ -110,4 +110,4 @@ jobs:
       with:
         name: drop-win
         path: wiki-js-windows.tar.gz
-        
+
