--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Setup Node.js environment
-      uses: actions/setup-node@v2.5.2
+      uses: actions/setup-node@v3
       with:
         node-version: 20.x
 
@@ -96,7 +96,7 @@ jobs:
 
     steps:
     - name: Setup Node.js environment
-      uses: actions/setup-node@v2.5.2
+      uses: actions/setup-node@v3
       with:
         node-version: 20.x
 
@@ -113,7 +113,7 @@ jobs:
 
     - name: Install Dependencies
       run: npm ci --omit=dev --audit=false --fund=false
-      working-directory: win/server
+      working-directory: win\server
 
     - name: Create Bundle
       run: tar -czf wiki-js-windows.tar.gz -C $env:GITHUB_WORKSPACE\win .
