ci: fix missing node_modules in build tarball

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,9 +77,9 @@ jobs:
         cp -R server _dist/server
         cp LICENSE _dist/LICENSE
         cp config.sample.yml _dist/config.sample.yml
-        cd server
+        cd _dist/server
         npm ci --omit=dev --audit=false --fund=false
-        cd ..
+        cd -
         find ./_dist/ -printf "%P\n" | tar -czf wiki-js.tar.gz --no-recursion -C ./_dist/ -T -
 
     - name: Upload Build Artifact
