--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "node": ">=18.0"
   },
   "dependencies": {
+    "@apollo/server": "4.7.1",
     "@azure/storage-blob": "12.14.0",
     "@exlinc/keycloak-passport": "1.0.2",
     "@graphql-tools/schema": "10.0.0",
@@ -44,10 +45,6 @@
     "@root/pem": "1.0.4",
     "acme": "3.0.3",
     "akismet-api": "6.0.0",
-    "apollo-fetch": "0.7.0",
-    "apollo-server": "3.6.7",
-    "apollo-server-express": "3.6.7",
-    "auto-load": "3.0.4",
     "aws-sdk": "2.1386.0",
     "bcryptjs": "2.4.3",
     "body-parser": "1.20.2",
