--- a/server/modules/analytics/umami2/definition.yml
+++ b/server/modules/analytics/umami2/definition.yml
@@ -1,5 +1,5 @@
 key: umami2
-title: Umami Analytics V2
+title: Umami Analytics v2
 description: Umami is a simple, fast, privacy-focused alternative to Google Analytics.
 author: CDN18
 logo: https://static.requarks.io/logo/umami.svg
