--- a/server/modules/authentication/oidc/definition.yml
+++ b/server/modules/authentication/oidc/definition.yml
@@ -80,3 +80,8 @@ props:
     title: Logout URL
     hint: (optional) Logout URL on the OAuth2 provider where the user will be redirected to complete the logout process.
     order: 12
+  acrValue:
+    type: String
+    title: ACR Value
+    hint: (optional) Authentication Context Class Reference
+    order: 13
