--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "markdown-it-sub": "1.0.0",
     "markdown-it-sup": "1.0.0",
     "markdown-it-task-lists": "2.1.1",
+    "markdown-it-pivot-table": "1.0.0",
     "mathjax": "3.2.2",
     "mime-types": "2.1.35",
     "moment": "2.29.4",
