--- a/ux/package.json
+++ b/ux/package.json
@@ -89,6 +89,7 @@
     "quasar": "2.12.1",
     "slugify": "1.6.6",
     "socket.io-client": "4.7.1",
+    "sortablejs-vue3": "1.2.9",
     "tabulator-tables": "5.5.0",
     "tippy.js": "6.3.7",
     "twemoji": "14.0.2",
