--- a/server/modules/authentication/google/definition.yml
+++ b/server/modules/authentication/google/definition.yml
@@ -22,9 +22,16 @@ props:
     type: String
     title: Client Secret
     hint: Application Client Secret
+    sensitive: true
     order: 2
   hostedDomain:
     type: String
     title: Hosted Domain
     hint: (optional) Only for G Suite hosted domain. Leave empty otherwise.
     order: 3
+refs:
+  callbackUrl:
+    title: Authorization Callback URL
+    hint: The callback endpoint to input on Google.
+    icon: back
+    value: '{host}/login/{id}/callback'
