--- a/server/modules/authentication/slack/definition.yml
+++ b/server/modules/authentication/slack/definition.yml
@@ -22,9 +22,16 @@ props:
     type: String
     title: Client Secret
     hint: Application Client Secret
+    sensitive: true
     order: 2
   team:
     type: String
     title: Team / Workspace ID
     hint: Optional - Your unique team (workspace) identifier
     order: 3
+refs:
+  callbackUrl:
+    title: Authorization Callback URL
+    hint: The callback endpoint to input on Slack.
+    icon: back
+    value: '{host}/login/{id}/callback'
