fix: add node 18 + 20 compatibility

--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "dev": true,
   "scripts": {
     "start": "node server",
-    "dev": "node dev",
-    "build": "webpack --profile --config dev/webpack/webpack.prod.js",
-    "watch": "webpack --config dev/webpack/webpack.dev.js",
+    "dev": "NODE_OPTIONS=--openssl-legacy-provider node dev",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider webpack --profile --config dev/webpack/webpack.prod.js",
+    "watch": "NODE_OPTIONS=--openssl-legacy-provider webpack --config dev/webpack/webpack.dev.js",
     "test": "eslint --format codeframe --ext .js,.vue . && pug-lint server/views && jest",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "postinstall": "patch-package"
   },
   "repository": {
     "type": "git",
@@ -116,10 +117,10 @@
     "markdown-it-mark": "3.0.1",
     "markdown-it-mathjax": "2.0.0",
     "markdown-it-multimd-table": "4.0.3",
+    "markdown-it-pivot-table": "1.0.1",
     "markdown-it-sub": "1.0.0",
     "markdown-it-sup": "1.0.0",
     "markdown-it-task-lists": "2.1.1",
-    "markdown-it-pivot-table": "1.0.1",
     "mathjax": "3.2.2",
     "mime-types": "2.1.35",
     "moment": "2.29.4",
@@ -154,12 +155,14 @@
     "passport-saml": "3.2.4",
     "passport-slack-oauth2": "1.1.1",
     "passport-twitch-strategy": "2.2.0",
+    "patch-package": "8.0.0",
     "pem-jwk": "2.0.0",
     "pg": "8.9.0",
     "pg-hstore": "2.3.4",
     "pg-pubsub": "0.5.0",
     "pg-query-stream": "4.3.0",
     "pg-tsquery": "8.4.1",
+    "postinstall-postinstall": "2.1.0",
     "pug": "3.0.2",
     "punycode": "2.3.0",
     "qr-image": "3.2.0",
