ci: manually patch extract-files package for windows build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -192,7 +192,7 @@ jobs:
     - name: Setup Node.js environment
       uses: actions/setup-node@v3.6.0
       with:
-        node-version: 16.x
+        node-version: 18.x
 
     - name: Download a Build Artifact
       uses: actions/download-artifact@v3.0.2
@@ -203,13 +203,19 @@ jobs:
     - name: Extract Build
       run: |
         mkdir -p win
-        tar -xzf $env:GITHUB_WORKSPACE\drop\wiki-js.tar.gz -C $env:GITHUB_WORKSPACE\win --exclude=node_modules
+        tar -xzf $env:GITHUB_WORKSPACE\drop\wiki-js.tar.gz -C $env:GITHUB_WORKSPACE\win
+        copy win\node_modules\extract-files\package.json patch-extractfile.json
+        rmdir /S /Q win\node_modules
 
     - name: Install Dependencies
       run: |
         yarn --production --frozen-lockfile --non-interactive
         yarn patch-package
       working-directory: win
+
+    - name: Fix patched packages
+      run: |
+        copy /y patch-extractfile.json win\node_modules\extract-files\package.json
 
     - name: Create Bundle
       run: tar -czf wiki-js-windows.tar.gz -C $env:GITHUB_WORKSPACE\win .
