--- a/server/package.json
+++ b/server/package.json
@@ -105,6 +105,7 @@
     "markdown-it-footnote": "3.0.3",
     "markdown-it-imsize": "2.0.1",
     "markdown-it-mark": "3.0.1",
+    "markdown-it-mdc": "0.1.3",
     "markdown-it-multimd-table": "4.2.2",
     "markdown-it-sub": "1.0.0",
     "markdown-it-sup": "1.0.0",
