--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,12 @@ jobs:
         npm ci --audit=false --fund=false
         npm run build
 
+    - name: Build Blocks
+      working-directory: blocks
+      run: |
+        npm ci --audit=false --fund=false
+        npm run build
+
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
