Fix Dockerfile and devcontainer.json - Change parameter for run command from python to python3 - Fix devcontainer settings structure

--- a/dev/containers/Dockerfile
+++ b/dev/containers/Dockerfile
@@ -5,7 +5,7 @@ FROM node:18
 LABEL maintainer "requarks.io"
 
 RUN apt-get update && \
-    apt-get install -y bash curl git python make g++ nano openssh-server gnupg && \
+    apt-get install -y bash curl git python3 make g++ nano openssh-server gnupg && \
     mkdir -p /wiki
 
 WORKDIR /wiki
