fix: various fixes + improvements

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
   "dev": true,
   "scripts": {
     "start": "cd .. && node server",
-    "dev": "cd .. && nodemon server --watch server --ext mjs,js,json,graphql,gql"
+    "dev": "cd .. && nodemon server --watch server --ext mjs,js,json,graphql,gql",
+    "ncu": "ncu -i -x codemirror,codemirror-asciidoc",
+    "ncu-u": "ncu -u -x codemirror,codemirror-asciidoc"
   },
   "repository": {
     "type": "git",
@@ -34,20 +36,19 @@
     "node": ">=18.0"
   },
   "dependencies": {
-    "@apollo/server": "4.7.5",
-    "@azure/storage-blob": "12.14.0",
+    "@apollo/server": "4.9.3",
+    "@azure/storage-blob": "12.16.0",
     "@exlinc/keycloak-passport": "1.0.2",
     "@graphql-tools/schema": "10.0.0",
     "@graphql-tools/utils": "10.0.1",
-    "@joplin/turndown-plugin-gfm": "1.0.49",
+    "@joplin/turndown-plugin-gfm": "1.0.50",
     "@root/csr": "0.8.1",
     "@root/keypairs": "0.10.3",
     "@root/pem": "1.0.4",
     "acme": "3.0.3",
     "akismet-api": "6.0.0",
-    "aws-sdk": "2.1409.0",
+    "aws-sdk": "2.1463.0",
     "bcryptjs": "2.4.3",
-    "body-parser": "1.20.2",
     "chalk": "5.3.0",
     "cheerio": "1.0.0-rc.12",
     "chokidar": "3.5.3",
@@ -58,13 +59,13 @@
     "connect-session-knex": "3.0.1",
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
-    "cron-parser": "4.8.1",
+    "cron-parser": "4.9.0",
     "cuint": "0.2.2",
     "custom-error-instance": "2.1.2",
     "dependency-graph": "0.11.0",
     "diff": "5.1.0",
-    "diff2html": "3.4.35",
-    "dompurify": "3.0.4",
+    "diff2html": "3.4.43",
+    "dompurify": "3.0.5",
     "dotize": "0.3.0",
     "emoji-regex": "10.2.1",
     "eventemitter2": "6.4.9",
@@ -72,30 +73,30 @@
     "express-brute": "1.0.1",
     "express-session": "1.17.3",
     "file-type": "18.5.0",
-    "filesize": "10.0.7",
+    "filesize": "10.0.12",
     "fs-extra": "11.1.1",
     "getos": "3.2.1",
-    "graphql": "16.7.1",
+    "graphql": "16.8.1",
     "graphql-list-fields": "2.0.2",
-    "graphql-rate-limit-directive": "2.0.3",
+    "graphql-rate-limit-directive": "2.0.4",
     "graphql-tools": "9.0.0",
     "graphql-upload": "16.0.2",
     "he": "1.2.0",
     "highlight.js": "11.8.0",
-    "i18next": "23.2.6",
+    "i18next": "23.5.1",
     "i18next-node-fs-backend": "2.1.3",
     "image-size": "1.0.2",
     "js-base64": "3.7.5",
     "js-binary": "1.2.0",
     "js-yaml": "4.1.0",
     "jsdom": "22.1.0",
-    "jsonwebtoken": "9.0.0",
+    "jsonwebtoken": "9.0.2",
     "katex": "0.16.8",
     "klaw": "4.1.0",
-    "knex": "2.4.2",
+    "knex": "2.5.1",
     "lodash": "4.17.21",
     "lodash-es": "4.17.21",
-    "luxon": "3.3.0",
+    "luxon": "3.4.3",
     "markdown-it": "13.0.1",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-attrs": "4.1.6",
@@ -105,8 +106,8 @@
     "markdown-it-footnote": "3.0.3",
     "markdown-it-imsize": "2.0.1",
     "markdown-it-mark": "3.0.1",
-    "markdown-it-mdc": "0.1.3",
-    "markdown-it-multimd-table": "4.2.2",
+    "markdown-it-mdc": "0.1.4",
+    "markdown-it-multimd-table": "4.2.3",
     "markdown-it-sub": "1.0.0",
     "markdown-it-sup": "1.0.0",
     "markdown-it-task-lists": "2.1.1",
@@ -114,11 +115,12 @@
     "mime-types": "2.1.35",
     "ms": "2.1.3",
     "multer": "1.4.4",
-    "nanoid": "4.0.2",
+    "nanoid": "5.0.1",
     "node-2fa": "2.0.3",
     "node-cache": "5.1.2",
-    "nodemailer": "6.9.3",
-    "objection": "3.0.4",
+    "nodemailer": "6.9.5",
+    "objection": "3.1.1",
+    "octokit": "3.1.0",
     "passport": "0.6.0",
     "passport-auth0": "1.4.3",
     "passport-azure-ad": "4.3.5",
@@ -140,46 +142,45 @@
     "passport-slack-oauth2": "1.2.0",
     "passport-twitch-strategy": "2.2.0",
     "pem-jwk": "2.0.0",
-    "pg": "8.11.1",
+    "pg": "8.11.3",
     "pg-hstore": "2.3.4",
     "pg-pubsub": "0.8.1",
-    "pg-query-stream": "4.5.1",
+    "pg-query-stream": "4.5.3",
     "pg-tsquery": "8.4.1",
-    "poolifier": "2.6.5",
+    "poolifier": "2.7.1",
     "punycode": "2.3.0",
-    "puppeteer-core": "20.7.4",
+    "puppeteer-core": "21.3.4",
     "qr-image": "3.2.0",
-    "rate-limiter-flexible": "2.4.1",
     "remove-markdown": "0.5.0",
     "request": "2.88.2",
     "request-promise": "4.2.6",
     "safe-regex": "2.1.1",
     "sanitize-filename": "1.6.3",
     "scim-query-filter-parser": "2.0.4",
-    "semver": "7.5.3",
+    "semver": "7.5.4",
     "serve-favicon": "2.5.0",
-    "sharp": "0.32.1",
+    "sharp": "0.32.6",
     "simple-git": "3.19.1",
-    "socket.io": "4.7.1",
+    "socket.io": "4.7.2",
     "striptags": "3.2.0",
-    "tar-fs": "3.0.3",
+    "tar-fs": "3.0.4",
     "turndown": "7.1.2",
     "twemoji": "14.0.2",
     "uslug": "1.0.4",
-    "uuid": "9.0.0",
+    "uuid": "9.0.1",
     "validate.js": "0.13.1",
     "xss": "1.0.14",
     "yargs": "17.7.2"
   },
   "devDependencies": {
-    "eslint": "8.44.0",
+    "eslint": "8.50.0",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "17.1.0",
-    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-import": "2.28.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-standard": "4.1.0",
-    "nodemon": "2.0.22"
+    "nodemon": "3.0.1"
   },
   "overrides": {
     "@graphql-tools/utils": "10.0.1"
