--- a/ux/package.json
+++ b/ux/package.json
@@ -9,41 +9,41 @@
     "dev": "quasar dev",
     "build": "quasar build",
     "lint": "eslint --ext .js,.vue ./",
-    "ncu": "ncu -x codemirror,codemirror-asciidoc",
+    "ncu": "ncu -i -x codemirror,codemirror-asciidoc",
     "ncu-u": "ncu -u -x codemirror,codemirror-asciidoc"
   },
   "dependencies": {
-    "@apollo/client": "3.8.2",
-    "@lezer/common": "1.0.4",
+    "@apollo/client": "3.8.4",
+    "@lezer/common": "1.1.0",
     "@mdi/font": "7.2.96",
     "@quasar/extras": "1.16.6",
-    "@tiptap/core": "2.1.8",
-    "@tiptap/extension-code-block": "2.1.8",
-    "@tiptap/extension-code-block-lowlight": "2.1.8",
-    "@tiptap/extension-color": "2.1.8",
-    "@tiptap/extension-dropcursor": "2.1.8",
-    "@tiptap/extension-font-family": "2.1.8",
-    "@tiptap/extension-gapcursor": "2.1.8",
-    "@tiptap/extension-hard-break": "2.1.8",
-    "@tiptap/extension-highlight": "2.1.8",
-    "@tiptap/extension-history": "2.1.8",
-    "@tiptap/extension-image": "2.1.8",
-    "@tiptap/extension-mention": "2.1.8",
-    "@tiptap/extension-placeholder": "2.1.8",
-    "@tiptap/extension-table": "2.1.8",
-    "@tiptap/extension-table-cell": "2.1.8",
-    "@tiptap/extension-table-header": "2.1.8",
-    "@tiptap/extension-table-row": "2.1.8",
-    "@tiptap/extension-task-item": "2.1.8",
-    "@tiptap/extension-task-list": "2.1.8",
-    "@tiptap/extension-text-align": "2.1.8",
-    "@tiptap/extension-text-style": "2.1.8",
-    "@tiptap/extension-typography": "2.1.8",
-    "@tiptap/pm": "2.1.8",
-    "@tiptap/starter-kit": "2.1.8",
-    "@tiptap/vue-3": "2.1.8",
+    "@tiptap/core": "2.1.11",
+    "@tiptap/extension-code-block": "2.1.11",
+    "@tiptap/extension-code-block-lowlight": "2.1.11",
+    "@tiptap/extension-color": "2.1.11",
+    "@tiptap/extension-dropcursor": "2.1.11",
+    "@tiptap/extension-font-family": "2.1.11",
+    "@tiptap/extension-gapcursor": "2.1.11",
+    "@tiptap/extension-hard-break": "2.1.11",
+    "@tiptap/extension-highlight": "2.1.11",
+    "@tiptap/extension-history": "2.1.11",
+    "@tiptap/extension-image": "2.1.11",
+    "@tiptap/extension-mention": "2.1.11",
+    "@tiptap/extension-placeholder": "2.1.11",
+    "@tiptap/extension-table": "2.1.11",
+    "@tiptap/extension-table-cell": "2.1.11",
+    "@tiptap/extension-table-header": "2.1.11",
+    "@tiptap/extension-table-row": "2.1.11",
+    "@tiptap/extension-task-item": "2.1.11",
+    "@tiptap/extension-task-list": "2.1.11",
+    "@tiptap/extension-text-align": "2.1.11",
+    "@tiptap/extension-text-style": "2.1.11",
+    "@tiptap/extension-typography": "2.1.11",
+    "@tiptap/pm": "2.1.11",
+    "@tiptap/starter-kit": "2.1.11",
+    "@tiptap/vue-3": "2.1.11",
     "apollo-upload-client": "17.0.0",
-    "browser-fs-access": "0.34.1",
+    "browser-fs-access": "0.35.0",
     "clipboard": "2.0.11",
     "codemirror": "5.65.11",
     "codemirror-asciidoc": "1.0.4",
@@ -59,7 +59,7 @@
     "katex": "0.16.8",
     "lodash-es": "4.17.21",
     "lowlight": "3.0.0",
-    "luxon": "3.4.2",
+    "luxon": "3.4.3",
     "markdown-it": "13.0.1",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-attrs": "4.1.6",
@@ -69,13 +69,13 @@
     "markdown-it-footnote": "3.0.3",
     "markdown-it-imsize": "2.0.1",
     "markdown-it-mark": "3.0.1",
-    "markdown-it-mdc": "0.1.3",
+    "markdown-it-mdc": "0.1.4",
     "markdown-it-multimd-table": "4.2.3",
     "markdown-it-sub": "1.0.0",
     "markdown-it-sup": "1.0.0",
     "markdown-it-task-lists": "2.1.1",
     "mitt": "3.0.1",
-    "monaco-editor": "0.41.0",
+    "monaco-editor": "0.43.0",
     "pako": "2.1.0",
     "pinia": "2.1.6",
     "prosemirror-commands": "1.5.2",
@@ -85,36 +85,36 @@
     "prosemirror-schema-list": "1.3.0",
     "prosemirror-state": "1.4.3",
     "prosemirror-transform": "1.7.5",
-    "prosemirror-view": "1.31.7",
+    "prosemirror-view": "1.31.8",
     "pug": "3.0.2",
-    "quasar": "2.12.6",
+    "quasar": "2.12.7",
     "slugify": "1.6.6",
     "socket.io-client": "4.7.2",
     "sortablejs-vue3": "1.2.9",
     "tabulator-tables": "5.5.2",
     "tippy.js": "6.3.7",
     "twemoji": "14.0.2",
-    "uuid": "9.0.0",
-    "v-network-graph": "0.9.7",
+    "uuid": "9.0.1",
+    "v-network-graph": "0.9.8",
     "vue": "3.3.4",
-    "vue-i18n": "9.2.2",
-    "vue-router": "4.2.4",
+    "vue-i18n": "9.4.1",
+    "vue-router": "4.2.5",
     "vue3-otp-input": "0.4.1",
     "vuedraggable": "4.1.0",
-    "xterm": "5.2.1",
+    "xterm": "5.3.0",
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
-    "@intlify/unplugin-vue-i18n": "0.13.0",
-    "@quasar/app-vite": "1.5.0",
-    "@types/lodash": "4.14.197",
+    "@intlify/unplugin-vue-i18n": "1.2.0",
+    "@quasar/app-vite": "1.6.2",
+    "@types/lodash": "4.14.199",
     "@volar/vue-language-plugin-pug": "1.6.5",
-    "autoprefixer": "10.4.15",
+    "autoprefixer": "10.4.16",
     "browserlist": "latest",
-    "eslint": "8.48.0",
+    "eslint": "8.50.0",
     "eslint-config-standard": "17.1.0",
     "eslint-plugin-import": "2.28.1",
-    "eslint-plugin-n": "16.0.2",
+    "eslint-plugin-n": "16.1.0",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-vue": "9.17.0"
   },
