--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,6 +74,7 @@ jobs:
         # cache-to: type=gha,mode=max
         platforms: linux/amd64,linux/arm64
         tags: |
+          ghcr.io/requarks/wiki:3.0.0-alpha
           ghcr.io/requarks/wiki:${{ env.REL_VERSION }}
 
     - name: Prepare build archive
