Fixed spelling in user-facing hint.
Co-authored-by: Tymoteusz Boba <Tymoteusz.Boba@gmail.com>

--- a/server/modules/authentication/discord/definition.yml
+++ b/server/modules/authentication/discord/definition.yml
@@ -26,5 +26,5 @@ props:
   roles:
     type: String
     title: Required Roles
-    hint: Optional - Comma-separated list of server role IDs that are required for access (you must hae a Server ID configured to use this.)
+    hint: Optional - Comma-separated list of server role IDs that are required for access (you must have a Server ID property configured to use this.)
     order: 4
